implement entity
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@20689 66ffb92e-73f9-0310-93c1-f5514f145a0a